--- a/public/css/prod.css
+++ b/public/css/prod.css
@@ -202,6 +202,8 @@ header {
     border-radius: 0 5px 5px 0;
     cursor: pointer;
     font-size: 20px;
+     margin-left: -3px; 
+    padding-bottom: 10px;
   }
   
 .product-section{
