--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -173,3 +173,86 @@ header {
   background-color: var(--main-color);
   color: #fff;
 }
+
+#cart_item{
+  margin-left: 0;
+}
+
+.stats-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.stat-item {
+  flex-basis: calc(33.33% - 20px);
+  width: 200px;
+  height: auto;
+  background: transparent;
+  border: 2px solid var(--main-color);
+  color: var(--text-color);
+  margin: 10px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 9px;
+}
+
+.switchbtn{
+  display:block;
+  text-decoration:none;
+  border: none;
+  padding:15px;
+  background:transparent;
+  color:var(--text-color);
+  height: 52px;
+  font-size:20px;
+  float:left;
+  width:50%;
+  text-align:center;
+  cursor:pointer;
+  transition:.5s ease;
+  &:hover {
+    background-color:var(--main-color);
+    color:var(--onmain-color);
+  }
+  :active{
+      background:var(--main-color);
+      color:var(--onmain-color);
+  }
+}
+
+.switchbtn.active{
+  background:var(--main-color);
+  color:var(--onmain-color);
+}
+
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: flex;
+}
+
+#cart_cont.hidden {
+  display: none;
+}
+
+@media (max-width: 768px) {
+ .stat-item {
+    flex-basis: 100%;
+    margin: 10px 0;
+  }
+}
+
+.order_link {
+  text-decoration: none; 
+  color: inherit; 
+}
+
+.order_link:visited {
+  color: inherit; 
+}
